--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/vpn?createTableIfNotExists=tru
 spring.datasource.username=root
 spring.datasource.password=Welcome@123
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=9999
